syntax = "proto3";

package token;

option go_package = "github.com/aligang/Gophkeeper/internal/common/token";

message Token {
  string id = 1;
  string issued_at = 2;
  string token_value = 3 ;
}